--- a/package.json
+++ b/package.json
@@ -18,5 +18,18 @@
     "mysql": "~2.12.0",
     "node-uuid": "*",
     "serve-favicon": "~2.3.0"
-  }
+  },
+  "description": "### 移动端",
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yctd1022/taogo.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/yctd1022/taogo/issues"
+  },
+  "homepage": "https://github.com/yctd1022/taogo#readme"
 }
